[package]
authors = ["Gabriela Alexandra Moldovan <gabi_250@live.com>"]
name = "rustc_codegen_ironox"
version = "0.0.0"

[lib]
name = "rustc_codegen_ironox"
path = "lib.rs"
crate-type = ["dylib"]
test = false

[dependencies]
ar = "0.6"
goblin = "0.0"
faerie = "0.5.1"
target-lexicon = "0.0.3"
x86asm = { git = "https://github.com/gabi-250/rust-x86asm", branch = "temporary-fix" }
